Bug 326730 - Can not download files unless there is a specific asset type handler
Summary: Can not download files unless there is a specific asset type handler
Status: RESOLVED FIXED
Alias: None
Product: bodega
Classification: Unmaintained
Component: Plasma Active client (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: HI normal
Target Milestone: ---
Assignee: Aaron J. Seigo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-27 12:29 UTC by Aaron J. Seigo
Modified: 2013-10-29 12:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron J. Seigo 2013-10-27 12:29:33 UTC
If a file is provided that does not fit the asset types with an type-specific handler, it simply can not be downloaded. 

Provide a generic downloader that puts the file into ~/Downloads to cover these cases.

Reproducible: Always
Comment 1 Aaron J. Seigo 2013-10-29 12:56:12 UTC
Git commit 6be2c844f9cb1932a1b415958d8c57d1a6c1dab9 by Aaron Seigo.
Committed on 29/10/2013 at 12:53.
Pushed by aseigo into branch 'master'.

a generic asset handler

it just installed into Downloads and uses xdg-open to open the result

M  +1    -0    lib/bodega/handlers/CMakeLists.txt
A  +28   -0    lib/bodega/handlers/generic/CMakeLists.txt
A  +63   -0    lib/bodega/handlers/generic/filethread.cpp     [License: LGPL (v2+)]
A  +49   -0    lib/bodega/handlers/generic/filethread.h     [License: LGPL (v2+)]
A  +97   -0    lib/bodega/handlers/generic/generichandler.cpp     [License: LGPL (v2+)]
A  +65   -0    lib/bodega/handlers/generic/generichandler.h     [License: LGPL (v2+)]
A  +47   -0    lib/bodega/handlers/generic/genericinstalljob.cpp     [License: LGPL (v2+)]
A  +45   -0    lib/bodega/handlers/generic/genericinstalljob.h     [License: LGPL (v2+)]
A  +47   -0    lib/bodega/handlers/generic/genericuninstalljob.cpp     [License: LGPL (v2+)]
A  +46   -0    lib/bodega/handlers/generic/genericuninstalljob.h     [License: LGPL (v2+)]

http://commits.kde.org/bodega-client/6be2c844f9cb1932a1b415958d8c57d1a6c1dab9