a generic asset handler

it just installed into Downloads and uses xdg-open to open the result

BUG:326730